--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <h2 class="step__title">契約手続き</h2>
                                 <p>その場で契約でも後日
                                     ネットでの契約の予約
-                                    も受け付けております。</p>
+                                    も受け付けてます。</p>
                                 </div>
                             </div>
                         </div>
