--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon alternate" href="img/favicon.png" type="image/png">
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <div class="logo">
             <a href="#0"><img src="img/logo.svg" alt="ロゴ"></a>
@@ -217,5 +218,6 @@
       $('.sm').slideToggle();
   });
 </script>
+</div>
 </body>
 </html>
